feat: finished implementing RBAC

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # JWT secret
-JWT_SECRET ='AABBCCDDAABBCCDDAABBCCDDAABBCCDDAABBCCDD'
+JWT_SECRET='AABBCCDDAABBCCDDAABBCCDDAABBCCDDAABBCCDD'
+JWT_ISSUER='ISSUER'
+JWT_AUDIENCE='AUDIENCE'
 
 # Mongo DB
-# Development Server
 MONGODB_URI='mongodb+srv://username:password@host/database'
 
 # Server Port
